# starter

./: pyproject.toml
db/: server.db
resources/: Thumbs.db
resources/background/: Thumbs.db
src/: startup_main.py  updater.py  util.py  version.py
src/config/: __init__.py  config.py  departments.yaml  logging_config.py  server_startup_db.txt  startup.json  version.json
src/farms/: __init__.py
src/farms/cgteamwork/: __init__.py  cgt_base.py  cgt_global.py
src/farms/cgteamwork/errors/: __init__.py  cgteamwork_error.py
src/farms/cgteamwork/info/: __init__.py  cgt_account.py  cgt_info_base.py  cgt_shot.py
src/farms/cgteamwork/info/assets/: cgt_asset_type.py  dataclass.py  project.py
src/farms/cgteamwork/info/shots/: __init__.py  cgt_episode.py  cgt_sequence.py  project.py
src/farms/cgteamwork/modules/: account_id_data.py  asset_data.py  project_data.py  shot_data.py
src/farms/cgteamwork/task/: __init__.py  cgt_task_base.py
src/farms/cgteamwork/task/assets/: project.py
src/models/: __init__.py  custom_types.py  data_classes.py  effect_style.py
src/models/startup/: software_dataclass.py  startup_db.py
src/models/startup/tests/: test_db.py
src/tests/: a.json
src/ui/: __init__.py  startup.ui  startup_ui.py
src/ui/custom_widget/: __init__.py  auto_dismiss_message.py  picture_view.py  software_browser.py  software_widget.py
src/ui/qss/: software_widget.css  startup.css
src/views/: __init__.py  software_browser_view.py  software_view.py  startup_view.py
tests/: auto_message.py
