[tool.poetry]
name = "starter"
version = "0.1.0"
description = ""
authors = ["KevinShuo <wangshuoart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.7.1"
nuitka = "^2.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
